[project]
name = "sma-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ddgs>=9.14.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-experimental>=0.4.1",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.1.14",
    "langchain-tavily>=0.2.18",
    "python-dotenv>=1.2.2",
]
